fix(navigation): fix tab order and layout shift (#1793)
* fix(navigation): toggle property that impacts the accessibility tree

* fix(navigation): maintain scrollbar space

when toggling the menu, don't collapse the space occupied by the scrollbar

--- a/apps/site/assets/css/_global-navigation.scss
+++ b/apps/site/assets/css/_global-navigation.scss
@@ -24,8 +24,9 @@ header {
 }
 
 [data-nav-open] {
-  body {
-    overflow: hidden; // prevent scrolling
+  .body-wrapper {
+    overflow: inherit; // same value as on body
+    position: relative; // so children elements using `position: absolute` are in the right place
   }
 
   .m-menu--cover {
@@ -133,7 +134,7 @@ nav.m-menu--desktop {
 .m-menu--desktop__menu {
   background-color: $brand-primary-lightest-contrast;
   box-shadow: 0 7px 14px 0 $gray-shadow;
-  height: 0; // start off closed
+  display: none; // start off closed
   left: 0;
   overflow: hidden;
   position: absolute;
@@ -143,7 +144,7 @@ nav.m-menu--desktop {
 
   // opened
   .m-menu--desktop__toggle[aria-expanded='true'] + & {
-    height: initial;
+    display: initial;
   }
 }
 
